--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 frontend/node_modules  
 backend/node_modules   
-backend/uploaded_files
-backend/comment_image
+# backend/uploaded_files
+# backend/comment_image
 /coverage
 /build
 .DS_Store
